--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,17 @@ files:
     destination: /usr/share/nginx/html/
 hooks:
   BeforeInstall:
+    - location: scripts/remove_existing_index
+      timeout: 60
+      runas: root
     - location: scripts/install_dependencies
-      timeout: 300
+      timeout: 60
       runas: root
     - location: scripts/start_server
-      timeout: 300
+      timeout: 60
       runas: root
   ApplicationStop:
     - location: scripts/stop_server
-      timeout: 300
+      timeout: 60
       runas: root
 
